syntax = "proto3";

option csharp_namespace = "SampleCompany.SampleProduct.ApplicationEngine.Proto";

import "google/protobuf/empty.proto";

package projectmanagement;

service ProjectManagement {
  rpc CreateProject (google.protobuf.Empty) returns (ProjectInfo);
  rpc DestoryProject (ProjectInfo) returns (google.protobuf.Empty);
}

message ProjectInfo {
  string id = 1;
}
